<resources>
    <string name="app_name">SmartHomeApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Bottom Menu Options-->
    <string name="menu_overview">Overview</string>
    <string name="menu_divisions">Divisions</string>
    <string name="menu_events">Events</string>
    <string name="menu_control">Control</string>
    <string name="menu_settings">Settings</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_load_house_config">Load House Configuration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to contentDescriptions of images -->
    <string name="logo_content_description">Logo Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
